--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,18 +11,18 @@ h1 {
   padding: 10px;
 }
 
-@media only screen and (max-width:600px) {
-  html{
-    transform: scale(375,768);
+/* @media only screen and (max-width:600px) {
+  .box{
+    zoom: 1.5;
   }
-}
+} */
 
 .box {
   max-width: 400px;
   margin: 50px auto;
   background: white;
   border-radius: 5px;
-  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+  box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.3);
 }
 
 #heading {
